@@ -61,7 +61,7 @@ $Net::SSLeay::slowly = 0;
 $Net::SSLeay::random_device = '/dev/urandom';
 $Net::SSLeay::how_random = 512;
 
-$VERSION = '1.45';
+$VERSION = '1.46.0';
 @ISA = qw(Exporter);
 
 #BEWARE:
